--- a/SwagLabs/pom.xml
+++ b/SwagLabs/pom.xml
@@ -65,7 +65,7 @@
 						<version>2.12.4</version>
 						<configuration>
 							<suiteXmlFiles>
-								<suiteXmlFile>testng.xml</suiteXmlFile>
+								<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
 					</plugin>
